<resources>
    <string name="app_name">浅酌</string>
    <string name="init_time">00:00</string>
    <string name="init_duration">00:00</string>

    <string name="my_music">我的音乐</string>
    <string name="default_playmode">列表循环</string>

    <string name="open">启动</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="introduce">ClickMusic是我在协同工作室考核期间做的简易音乐播放器,虽然功能少，可是bug多啊</string>
    <string name="hint_accout">手机号码：</string>
    <string name="hint_password">验证码：</string>
    <string name="get_code">获取验证码</string>
    <string name="login">登陆</string>
    <string name="org">haibiao.org</string>
    <string name="notification_content">ClickMusic正在播放</string>
    <string name="always_light">歌词界面常亮</string>
    <string name="sleep_mode">睡眠模式</string>

    <string name="theme_change">切换主题</string>
    <string name="theme_blue">蓝白清新</string>
    <string name="nullDataError">data cannot be null!</string>
    <string name="volume">独立音量:</string>
    <string name="volume_system">系统音量:</string>
    <string name="song_name">Do you marry me?</string>
    <string name="artist_name">yes i do!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="alarm_song_title">铃声</string>
    <string name="alarm_repeat_mode_title">重复</string>
    <string name="alarm_page_title">音乐闹钟</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="choose_song_page_title">选择铃声</string>

</resources>
